--- a/webapp/.eslintrc
+++ b/webapp/.eslintrc
@@ -10,6 +10,7 @@
   "rules": {
     "no-console": 1,
     "no-param-reassign": 1,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "jsx-a11y/label-has-associated-control": 0
   }
 }
