feat(api): use cors to Access-Control-Allow-Origin

--- a/api/package.json
+++ b/api/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.5",
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
-    "babel-eslint": "^10.0.1"
+    "nodemon": "^1.18.5"
   }
 }
