--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.4",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "objection": "^1.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
