--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,12 @@
   "author": "kilt",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon ./index.js"
+    "start": "nodemon ./index.js --exec \"node -r babel-register\""
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-register": "^6.26.0",
     "eslint": "^5.8.0",
     "nodemon": "^1.18.5"
   }
