--- a/webapp/.eslintrc
+++ b/webapp/.eslintrc
@@ -12,8 +12,9 @@
     "no-debugger":"warn",
     "camelcase":"off",
     "no-param-reassign": 1,
+    "arrow-body-style": 0,
     "react/prefer-stateless-function": 0,
     "jsx-a11y/label-has-associated-control": 0,
-    "arrow-body-style": 0
+    "jsx-a11y/click-events-have-key-events": 0
   }
 }
