--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^10.0.1",
     "babel-register": "^6.26.0",
     "eslint": "^5.8.0",
+    "faker": "^4.1.0",
     "nodemon": "^1.18.5"
   }
 }
