--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
