--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "@svgr/webpack": "2.4.1",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
     "formik": "^1.3.1",
-    "foundation-sites": "^6.5.0",
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
