--- a/webapp/package.json
+++ b/webapp/package.json
@@ -51,6 +51,7 @@
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "reselect": "^4.0.0",
