--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.1.0",
-    "@material-ui/core": "^3.5.1",
+    "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
     "@svgr/webpack": "2.4.1",
     "axios": "^0.18.0",
@@ -50,6 +50,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
+    "react-fastclick": "^3.0.2",
     "react-redux": "^5.1.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
