--- a/api/package.json
+++ b/api/package.json
@@ -16,16 +16,20 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "objection": "^1.4.0"
+    "nodemon": "^1.18.9",
+    "objection": "^1.4.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-register": "^6.26.0",
     "eslint": "^5.8.0",
-    "faker": "^4.1.0",
-    "nodemon": "^1.18.5"
+    "faker": "^4.1.0"
   }
 }
