--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "author": "capsule5",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./index.js --exec \"node -r babel-register\"",
+    "start": "node scripts/start.js",
     "db:install": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
