--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "nodemon": "^2.0.2",
     "objection": "^1.4.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
